<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity = "center"
    android:background="@color/backgroundColor"
    tools:context="group19.employeetracker.LogIn">

    <!--
        <EditText
            android:id="@+id/editText3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="#FFEBEE"
            android:typeface="sans"
            android:background="@null"
            android:text="Employee Tracker" />
            -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/newlogo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:textColorHint="#ffffff"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:textColorHint="#FFEBEE"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="201dp" />

    <Button
        android:id="@+id/blogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:background="@color/buttonColor"
        android:text="@string/login_enter"
        android:textColor="@color/buttonColorText"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_no_account"
        android:textColor="@color/buttonColorText"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="340dp" />

</LinearLayout>